updated ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -48,13 +48,15 @@ saved_models_hog_svm
 saved_models_rcnn_scores
 fnames_splits
 
+
 # Results files #
 #################
 *.pdf
 
 # Local experiment scripts #
 ############################
-w
+situate_experiment_script_*.m
+
 # Do not ignore #
 #################
 !+cnn/imagenet-vgg-f.mat
