--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
+# git has its own built in compression
 *.7z
 *.dmg
 *.gz
@@ -43,15 +43,15 @@ Thumbs.db
 #####################
 *.mat
 
-
-
-# Results files #
+# Results, notes, matconvnet #
 #################
 *.pdf
 results/*
+other stuff/*
+matconvnet/*
 
 
 # Do not ignore #
 #################
-!+cnn/imagenet-vgg-f.mat
+# !+cnn/imagenet-vgg-f.mat
 
