removed hard-coded directories, some unused functions, some exploratory scripts

--- a/.gitignore
+++ b/.gitignore
@@ -47,11 +47,11 @@ Thumbs.db
 #################
 *.pdf
 results/*
-other stuff/*
+local only/*
 matconvnet/*
 
 
 # Do not ignore #
 #################
-# !+cnn/imagenet-vgg-f.mat
+
 
