added some big files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,11 @@ Thumbs.db
 # Results, notes, matconvnet #
 #################
 *.pdf
-results/*
 local only/*
 matconvnet/*
+results/*
+rcnn box data/*
+saved_models/*
 
 
 # Do not ignore #
